<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/mostrartoastsimples_string"
            android:textAllCaps="false"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/mostrartoastcustom_string"
            android:textAllCaps="false"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/notify_simples_string"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/notify_custom_string"
            android:textAllCaps="false"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/notify_progress_string"
            android:textAllCaps="false"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/notify_custom_action_string"
            android:textAllCaps="false"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button7"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/notify_big_text_string"
            android:textAllCaps="false"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Heads-up e Visibility"
            android:textAllCaps="false"
            android:textSize="24sp" />
    </LinearLayout>
</ScrollView>